# wordscape

./: .gitignore  wordscape-app.py  wordscape-cheat.hs  wordscape.cabal
app/: Main.hs  Wordscape.hs
